--- a/onlinestore/pom.xml
+++ b/onlinestore/pom.xml
@@ -23,11 +23,23 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -39,6 +51,10 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+
+
+
+
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -49,7 +65,18 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		
+		
+<!--  https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools 
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-devtools</artifactId>
+	</dependency>
+	-->
 	
+	
+
 	</dependencies>
 
 	<build>
